[build-system]
requires = ["setuptools>=60", "setuptools-scm>=8.0", "wheel"]

[project]
name = "breathing_earth_system_simulator"
version = "1.0.3"
description = "Breathing Earth System Simulator (BESS) Gross Primary Production (GPP) and Evapotranspiration (ET) Model Python Implementation"
readme = "README.md"
authors = [
    { name = "Gregory H. Halverson", email = "gregory.h.halverson@jpl.nasa.gov" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "rasters"
]

requires-python = ">=3.10"

[tool.setuptools.package-data]
breathing_earth_system_simulator = ["*.txt", ".tif", "*.jpeg", "*.h5"]

[project.urls]
"Homepage" = "https://github.com/JPL-Evapotranspiration-Algorithms/breathing_earth_system_simulator"
